BusOne02/src/objects/Account_Plan_vod__c.object
<CustomObject>
    <description>This object stores all Account Plan header data</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to master account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plan_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if account plan is active.  Must be checked to be utilized in a Meeting Brief.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Plan_Tactics_vod__c</fullName>
        <label>Completed Plan Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of account plan.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Health_vod__c</fullName>
        <description>Indicated the overall health of the account plan</description>
        <label>Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green_vod</fullName>
                </value>
                <value>
                    <fullName>Yellow_vod</fullName>
                </value>
                <value>
                    <fullName>Red_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>SWOT: Opportunities</description>
        <label>Opportunities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_vod__c</fullName>
        <description>Percent Complete</description>
        <label>% Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Tactic_Progress_vod__c</fullName>
        <label>Plan Tactic Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Progress_vod__c</fullName>
        <description>Value calculated from the total and completed number of sub-level tasks</description>
        <label>Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of account plan.  The field is used in the workflow approval process.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>SWOT: Strengths</description>
        <label>Strengths</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>SWOT: Threats</description>
        <label>Threats</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Plan_Tactics_vod__c</fullName>
        <label>Total Plan Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of account plan such as National, Regional or Local.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>SWOT: Weaknesses</description>
        <label>Weaknesses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan_vod</fullName>
        <active>true</active>
        <description>Base record type for Account Plans</description>
        <label>Account_Plan_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>